--- a/ORG/bcc266TP2_cache_acesso_direto/Makefile
+++ b/ORG/bcc266TP2_cache_acesso_direto/Makefile
@@ -1,39 +1,28 @@
-# Compiler
+# Set directories
+SRC_DIR = src
+BUILD_DIR = build
+
+# Compiler and flags
 CC = gcc
+CFLAGS = -Wall -g
 
-# Compiler flags
-CFLAGS = -Wall -Wextra -std=c99 -O2 -lm
+# Find all source files
+SRCS = $(wildcard $(SRC_DIR)/*.c)
 
-# Source files
-SRCS = programa.c cpu.c ram.c mmu.c geradorInstrucoes.c
-
-# Object files
-OBJS = $(SRCS:.c=.o)
-
-# Header files
-HDRS = blocoMemoria.h cpu.h endereco.h instrucao.h mmu.h ram.h
-
-# Executable name
-TARGET = toy_simulator
+# Generate object file names by replacing .c with .o and setting the build directory
+OBJS = $(SRCS:$(SRC_DIR)/%.c=$(BUILD_DIR)/%.o)
 
 # Default target
-all: $(TARGET)
+all: my_program
 
-# Link object files to create the executable
-$(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+# Link the object files into the executable
+my_program: $(OBJS)
+	$(CC) $(OBJS) -o my_program
 
-# Compile source files into object files
-%.o: %.c $(HDRS)
+# Rule to compile .c to .o
+$(BUILD_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Clean up build files
 clean:
-	rm -f $(OBJS) $(TARGET)
-
-# Run the executable
-run:
-	./$(TARGET)
-
-# Phony targets
-.PHONY: all clean run
+	rm -rf $(BUILD_DIR)/*.o my_program
